--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
@@ -13,9 +14,11 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FilePathsBase = "48062228-2e41-5def-b9a4-89aafe57970f"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
+GPUArraysCore = "46192b85-c4d5-4398-a991-12ede77f4527"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
+MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 MLJ = "add582a8-e3ab-11e8-2d5e-e98b27df1bc7"
 MLJBase = "a7f614a8-145f-11e9-1d2a-a57a1082229d"
 Normalization = "be38d6a3-8366-4a42-ad57-222272b5bbe7"
@@ -32,11 +35,13 @@ StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 TuringGLM = "0004c1f4-53c5-4d43-a221-a1dac6cf6b74"
+WAV = "8149f6b0-98f6-5db9-b78f-408fbbb8ef88"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
 BenchmarkTools = "1.6.0"
 CSV = "0.10.15"
+CUDA = "5.8.2"
 CategoricalArrays = "0.10.8"
 DataFrames = "1.7.0"
 DataFramesMeta = "0.15.4"
@@ -44,9 +49,11 @@ Distributions = "0.25.117"
 FilePathsBase = "0.9.23"
 ForwardDiff = "0.10.38"
 GLM = "1.9.0"
+GPUArraysCore = "0.2.0"
 LaTeXStrings = "1.4.0"
 LinearAlgebra = "1.11.0"
 LoopVectorization = "0.12.172"
+MAT = "0.10.7"
 MLJ = "0.20.7"
 MLJBase = "1.7.0"
 Normalization = "0.7.3"
@@ -63,4 +70,5 @@ StatsPlots = "0.15.7"
 Test = "1.11.0"
 TimerOutputs = "0.5.29"
 TuringGLM = "2.13.0"
+WAV = "1.2.0"
 XLSX = "0.10.4"
